<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">Coinz</string>
    <string name="action_settings">Settings</string>
    <string name="action_check_all">Check all</string>
    <string name="action_sort_gold">Sort by gold value</string>
    <string name="action_sort_currency">Sort by currency</string>
    <!-- firebase access token -->
    <string name="access_token">pk.eyJ1IjoiZGR2bSIsImEiOiJjam4xbW9idDMxZ2lyM3FwbGN6cGZoaGJjIn0.1gKNVn6Quvkn4PPjx40k5w</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login/register -->
    <string name="required">Required</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_acc">Create new account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="weak_password_error">Password should be at least 6 characters long</string>
    <string name="invalid_email_format">Please enter a valid email</string>
    <string name="email_collision">Account with this email already exists</string>
    <string name="invalid_email_pass">Invalid email or password</string>
    <string name="long_username">Only 15 characters allowed</string>
    <string name="username_not_available">Username not available. Please choose another username</string>
    <string name="invalid_username_format">Only alphanumeric characters allowed</string>

    <!-- navigation drawer strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_out">Sign out</string>

    <!-- main activity strings -->
    <string name="wallet_full">No space in the wallet!</string>
    <string name="distance_to_object">Distance to coin: </string>
    <string name="collected_coin">Coin collected!</string>
    <string name="no_network">Please check your internet connection</string>
    <string name="prompt_try_again">Try again</string>
    <string name="close_app">Exit</string>

    <!-- wallet strings -->
    <string name="wallet">Wallet</string>
    <string name="discard_coin">Discard</string>
    <string name="pay_in_bank">Pay in</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="not_in_bank">Go to the bank to pay in coins</string>
    <string name="limit_exhausted">You have exhausted your pay in limit for today</string>
    <string name="no_coins_to_pay_in_selected">Please select coins to pay into your bank account</string>
    <string name="transaction_successful">Transaction successful!</string>

    <!-- shop strings -->
    <string name="shop">Shop</string>
    <string name="buy_item">Buy</string>
    <string name="item_owned">Bought</string>
    <string name="not_enough_gold">You don\'t have enough gold to buy this item</string>
    <string name="not_in_shop">Go to the shop to buy items</string>

    <!-- bank strings -->
    <string name="bank">Bank</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="shil">SHIL</string>
    <string name="peny">PENY</string>
    <string name="dolr">DOLR</string>
    <string name="quid">QUID</string>
    <string name="coin_limit">Coins paid in today</string>

    <!-- send coins strings -->
    <string name="send_coins_activity_tag">SendCoinsActivity</string>
    <string name="prompt_recipient">Recipient\'s username</string>
    <string name="send_coins">Send Coins</string>
    <string name="not_in_bank_for_send_coins">Go to the bank to send coins</string>
    <string name="no_spare_change">You can only send coins after storing 25 coins in the bank on a given day</string>
    <string name="no_coins_to_send">Please select coins to send</string>

    <!-- received coins strings -->
    <string name="received_coins">Received coins</string>

    <!-- leaderboard strings -->
    <string name="leaderboard">Leaderboard</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- settings strings -->
    <string name="settings">Settings</string>
    <string name="coins_autocollection">Coins autocollection</string>
    <string name="prompt_new_username">New username</string>
    <string name="prompt_choose_new_name">Please choose your new username</string>
    <string name="change_username">Change username</string>
    <string name="username_change_success">Username successfully changed to </string>
    <string name="username_change_failure">Error changing username</string>
    <!-- location strings -->
    <string name="no_location">Location unavailable. Please enable location</string>
</resources>
